--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {background-color: #574FE8;
     </map>
 </strong></p>
 <h3>Description of Class&nbsp;</h3>
-<p>his is my first we bsite development class and utilizing Adobe Dreamweaver for creating a website. One of the first lessons I learned was good practices for designing a website. I have learned how to use the CSS Designer in Dreamweaver to add content.</p>
+<p>This is my first website development class and utilizing Adobe Dreamweaver for creating a website. One of the first lessons I learned was good practices for designing a website. I have learned how to use the CSS Designer in Dreamweaver to add content.</p>
 <p><u>Last Updated 
   <!-- #BeginDate format:Am1 -->March 28, 2023<!-- #EndDate --></u>
 </p>
