--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {background-color: #574FE8;
 
 <p><strong>Email me at ngdomenico@my.waketech.edu</strong> </p>
 <p> Find me on <a href="https://twitter.com/webdesign123344">Twitter</a> @webdesign123344</p>
-<p><strong><img src="assets/pexels-pixabay-461064.jpg" alt="person working on a computer" width="390" height="350" usemap="#Map" class="laptop">
+<p><strong><img src="pexels-pixabay-461064.jpg" alt="person working on a computer" width="390" height="350" usemap="#Map" class="laptop">
     <map name="Map">
       <area shape="rect" coords="8,11,390,347" href="MarkupLanguage.html" alt="link to MarkupLanguage page">
     </map>
