--- a/AboutMe.html
+++ b/AboutMe.html
@@ -40,7 +40,7 @@ body {
 
 <body>
 <h1><strong> About Me</strong></h1> 
-<p id="Bio">Nathanial Domenico</p> <img src="./assets/pexels-daniel-jurin-1835718.jpg" width="106" height="107" alt="beautiful beach"><img src="./assets/pexels-petra-nesti-13386675.jpg" width="106" height="107" alt="vast green mountains">
+<p id="Bio">Nathanial Domenico</p> <img src="/pexels-daniel-jurin-1835718.jpg" width="106" height="107" alt="beautiful beach"><img src="/pexels-petra-nesti-13386675.jpg" width="106" height="107" alt="vast green mountains">
 <nav class="fluid menu_bar">
 <p> <a href="index.html">Home</a> - <a href="AboutMe">About Me</a> - <a href="WEB.html">WEB</a> - <a href="MarkupLanguage.html">Markup Language</a> - <a href="ToolsandProcesses.html">Tools and Processes</a> - <a href="Databases.html">Databases</a></p>
 </nav>
