--- a/AboutMe.html
+++ b/AboutMe.html
@@ -54,7 +54,7 @@ If you want to contact me, Email me at ngdomenico@my.waketech.edu.</strong></h4>
 <h4>Passed all courses with a 91% A or higher.</h4>
 <ol>
   <li>Adobe Visual Design</li>
-  <li>Adobe Digital  and Animation I</li>
+  <li>Adobe Digital Design and Animation I</li>
 	<li>Python Programming I</li>
   <li>Python Programming II</li>
   <li>Microsoft Word and Powerpoint</li>
