--- a/WEB.html
+++ b/WEB.html
@@ -24,10 +24,12 @@ body {
 <p>The work from this unit:</p>
 <ol>
 	  <li>Wireframe and site map(most proud of)</li>
+	<img src="wireframe and sitemap.png" width="700" height="700" alt="This is the wireframe and sitemap for my portfolio website."/>
+	<p> This wireframe and sitemap was the initial idea for how I would set up my website. My vision for the webiste changed a fair amount overtime. Doing this assignment helped me figure out the best practices for making sitempas and wireframes.</p>
 	  <li>Generating content</li>
-	  <li>The second assignment of the unit</li>
-	  <li>The third assignment of the unit</li>
-	  <li>The fourth assignment of the unit</li>
+	  <img src="generating content.png" width="500" height="500" alt="These are teh first versions of paragraphs I wrote for my website."/>
+	<p> This was my original idea for some of the text on my website. The final version of this text is on the about me page as opposed to the home page. This assignment also taught me about planning for website creation.</p>
 	</ol>
+<p><a href="index.html">Return to Home Page</a></p>
 </body>
 </html>
