--- a/MarkupLanguage.html
+++ b/MarkupLanguage.html
@@ -21,8 +21,12 @@ body {
 	<p>The Work From This Unit:</p>
 	<ol>
 	  <li>Striped Umbrella Website (most proud of)</li>
-	  <li>Try It Both Ways</li>
-	  <li>Dreamweaver Tutorial</li>
+	  <img src="str_umb.png" width="500" height="500" alt="This is a part of the Striped Umbrella website I worked on."/>
+		<p> In this class, I worked on a website for the Striped Umbrella, which is supposed to be a resort in Florida. Creating this helped me learn how to use Dreamweaver. I learned how to put images on websites, how to format text, and more.</p>
+<li>Try It Both Ways</li>
+	  <img src="try it both ways excerpt.png" width="500" height="500" alt="This is an excerpt from the Try It Both Ways assignment."/>
+		<p> This assignment taught me how to code a website outside of Dreamweaver. I used Visual Studio Code for this assignment.</p>
+<li>Dreamweaver Tutorial</li>
 	  <li>The third assignment of the unit</li>
 	  <li>The fourth assignment of the unit</li>
 </ol>
