--- a/ToolsandProcesses.html
+++ b/ToolsandProcesses.html
@@ -20,9 +20,13 @@ body {
 </nav>
 	<p>The Work From This Unit:</p>
 	<ol>
-	  <li> (most proud of)</li>
-	  <li>The second assignment of the unit</li>
-	  <li>The third assignment of the unit</li>
+	  <li>GitHub assignment (most proud of)</li>
+	  <img src="GitHub.png" width="500" height="500" alt="This is the finish screen of the GitHub assignment I did."/>
+		<p>This is the assigment that first taight me how to use GitHub. I learned how to make branches, commits, and pull requests.</p>
+<li>The second assignment of the unit</li>
+	  <img src="LinkedIn Certification.png" width="500" height="500" alt="This is my LinkedIn Certificate for Visual Studio Code Productivity Tips."/>
+		<p>This LinkedIn Cerificate is fron some of my training with Visual Studio Code. I learned hwo to be productive with it, alongside Visual Studio Code tips and tricks.</p>
+<li>The third assignment of the unit</li>
 	  <li>The fourth assignment of the unit</li>
 </ol>
 <p><a href="index.html">Return to Home Page</a></p>
